<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/dashboardFragment"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/transactionsFragment"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_transactions" />
    <item
        android:id="@+id/clientsFragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/nav_clients" />
    <item
        android:id="@+id/reportsFragment"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="@string/nav_reports" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/nav_settings" />
</menu>
